plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

javafx {
    version = 25
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation files("../libs/JJFXUtils.jar")
    implementation files("../libs/jelib-core.jar")
    implementation files("../libs/jelib-io.jar")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'org.vocab.App'
    mainModule = 'App'
    applicationDefaultJvmArgs = [
        "--enable-native-access=javafx.graphics"
    ]
}

jar {
    manifest {
        attributes 'Main-Class': 'org.vocab.App'
    }
}